--- a/templates/susses.html
+++ b/templates/susses.html
@@ -5,14 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phonopedia - Sign In</title>
+    <title>Lapcon - Sign In</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/logo-small.png' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'image/logolapcon.png' %}">
     <style>
         body {
-            background: radial-gradient(#fff,#748d92);
+            background: radial-gradient(#ffff,#4a1cb6ff);
             height: 100vh;
             display: flex;
             justify-content: center;
@@ -22,6 +22,7 @@
             background-color: white;
             border-radius: 15px;
             padding: 30px;
+            
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
             width: 100%;
             max-width: 400px;
@@ -31,7 +32,7 @@
         }
         .login-container .btn-google {
             background-color: #ffffff;
-            border: .2px solid #124E66;
+            border: .2px solid #4a1cb6ff;
             color: #333;
             width: 100%;
             margin-bottom: 15px;
@@ -66,24 +67,24 @@
         }
         .btn-primary{
             border-radius: 25px;
-            background-color: #124E66;
-            border: #124E66 solid;
+            background-color: #482ec9ff;
+            border: #5f36d2ff solid;
         }
         .btn-primary:hover{
             border-radius: 25px;
             background-color: #ffffff;
-            border: #124E66 solid;
-            color: #124E66;
+            border: #4a2fc1ff solid;
+            color: #4918dcff;
         }
         .form-control{
             border-radius: 25px;
-            border: #124E66 solid .2px ;
+            border: #5c31d2ff solid .2px ;
         }
         .d-block{
-            color: #124E66;
+            color: #4029d9ff;
         }
         .d-block:hover{
-            color: #748d92;
+            color: #5c4ac3ff;
             text-decoration: none;
         }
         .mt-3{
@@ -91,7 +92,7 @@
             justify-content: space-between;
         }
         h2{
-            color: #124E66;
+            color: #510df1ff;
         }
         @media only screen and (max-width: 800px){
     
@@ -107,7 +108,7 @@
 </head>
 <body>
     <div class="login-container text-center">
-        <svg style="    width: 200px; height: auto; margin-bottom: 20px; color: #124E66;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2-circle" viewBox="0 0 16 16">
+        <svg style="    width: 200px; height: auto; margin-bottom: 20px; color: #04a331ff;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check2-circle" viewBox="0 0 16 16">
             <path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0"/>
             <path d="M15.354 3.354a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
           </svg>
