--- a/templates/usesr_details.html
+++ b/templates/usesr_details.html
@@ -338,14 +338,14 @@
                 <img style="    width: 30px;" src="{% static 'images/wallet.png' %}" alt="Wallet Icon"> Wallet
             </a>
         </div>
-        <div class="coupon text-center col-md-12">
+        <!-- <div class="coupon text-center col-md-12">
             <p>20% off up to ₹2000 on smart Phones</p>
             <p>Get extra 20% off upto ₹200 on items (Price inclusive on cashback/coupon)</p>
-        </div>
-        <div class="coupon text-center col-md-12">
+        </div> -->
+        <!-- <div class="coupon text-center col-md-12">
             <p>20% off up to ₹2000 on smart Phones</p>
             <p>Get extra 20% off upto ₹200 on items (Price inclusive on cashback/coupon)</p>
-        </div>
+        </div> -->
     </div>
 </div>
 <br><br><br>
