signup page form validation frontend

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -754,3 +754,9 @@ h5 s {
     right: 35px;
     }
   }
+
+.error-message {
+            color: red;
+            font-size: 14px;
+            margin-top: 5px;
+        }  
