--- a/templates/Confirm_email.html
+++ b/templates/Confirm_email.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Phonopedia - Sign In</title>
+    <title>lapcon - Confirm email</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/logo-small.png' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/logolapcon.png' %}">
     <style>
         body {
             background-image: url('{% static 'image/lapban.jpg' %}');
