--- a/templates/Signin.html
+++ b/templates/Signin.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" >
     <link rel="stylesheet" href="style.css">
     <title>Lapcon User | SignIn</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/logolapcon.png' %}" />
+    
 </head>
 <body style="background: linear-gradient(to bottom, #6a11cb, #2575fc);">
    <!----------------------- Main Container -------------------------->
@@ -79,7 +81,7 @@
                  </form>
                 
                 <div class="row">
-                    <small>Don't have account? <a href="#">Sign Up</a></small>
+                    <small>Don't have account? <a href="{% url 'signup' %}">Sign Up</a></small>
                 </div>
           </div>
        
