--- a/templates/usesr_details.html
+++ b/templates/usesr_details.html
@@ -7,7 +7,8 @@
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #ffffff;
+            background: #020024;
+            background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(93, 93, 240, 1) 45%, rgba(6, 78, 171, 1) 76%, rgba(0, 212, 255, 1) 100%);
             font-family: Arial, sans-serif;
         }
 
@@ -23,7 +24,7 @@
         }
 
         .section-title {
-            color: #124e66;
+            color: #ffff;
             font-weight: bold;
         }
 
