--- a/templates/variant_details.html
+++ b/templates/variant_details.html
@@ -3,32 +3,115 @@
 {% block title %}{{variant.product.name}}{% endblock %}
 {% block contant %}
 <style>
-    #ProductImg{
-        transition: transform 0.3s ease;
-        cursor: pointer;
-    }
-    #ProductImg:hover {
-        transform: scale(1.3);
-    }
+    
+.product-gallery {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+/* Main image container */
+.main-image-container {
+    position: relative;
+    width: 300px;
+    height: 380px;
+    border: 1px solid #ddd;
+    overflow: hidden;
+}
+
+/* Main display image */
+.main-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    cursor: zoom-in;
+}
+
+/* Zoom Lens */
+#zoomLens {
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    border: 1px solid #777;
+    display: none;
+    background-color: rgba(255, 255, 255, 0.3);
+    cursor: crosshair;
+}
+
+/* Zoom result window */
+#zoomResult {
+    width: 380px;
+    height: 380px;
+    border: 1px solid #ddd;
+    background-repeat: no-repeat;
+    display: none;
+    margin-top: 10px;
+}
+
+/* Thumbnails */
+.small-img-row {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.small-img-col img {
+    width: 60px;
+    height: 60px;
+    cursor: pointer;
+    border: 1px solid #eee;
+    object-fit: cover;
+}
+
+.small-img-col img:hover {
+    border: 1px solid #124e66;
+}
 </style>
 <!-- Single Products -->
+ <div style="width: 20%;"><p  class="bredcrums align-left">Home / {{variant.product.name}}</p></div>
 <div class="small-container single-product">
+     
     <div class="row">
-        <div class="col-2">
-            <img src="{{variant.image.url}}" width="100%" id="ProductImg" style="background-color: transparent; mix-blend-mode: multiply;">
+        <div class="col-2 product-gallery">
 
-            <div class="small-img-row">
-                {% for secondary_image in secondary_images%}
-                <div class="small-img-col" onclick="fun()">
-                    <img src="{{secondary_image.image.url}}" width="100%" class="small-img">
-                </div>
-                {% endfor %}
-            </div>
+    <!-- Main Image -->
+    <div class="main-image-container">
+        <img id="mainImage" src="{{ variant.image.url }}" class="main-image">
+        <div id="zoomLens"></div>
+    </div>
 
-        </div>
+    <!-- Zoom window -->
+    <div id="zoomResult"></div>
+
+
+<!-- Thumbnails -->
+<div class="small-img-row">
+    
+    <!-- Primary Image (Variant Image) -->
+    {% if variant.image %}
+    <div class="small-img-col">
+        <img src="{{ variant.image.url }}" class="thumb small-img"
+             onclick="changeImage('{{ variant.image.url }}')">
+    </div>
+    {% endif %}
+
+    <!-- Secondary Images -->
+    {% for secondary_image in secondary_images %}
+    <div class="small-img-col">
+        <img src="{{ secondary_image.image.url }}" class="thumb small-img"
+             onclick="changeImage('{{ secondary_image.image.url }}')">
+    </div>
+    {% endfor %}
+
+</div>
+
+
+
+</div>
+        
         <div class="col-2">
-            <p class="bredcrums">Home / {{variant.product.name}}</p>
-            <h1>{{variant.product.name}}</h1>
+           
+            <h1 style="color:black ; font-size:20px;font-style:italic;">{{variant.product.name}}</h1>
             {%if offer != 0%}
                 <h5><s>₹{{variant.price}}</s></h5><br>
                 <h5 class="price_4" style="color: cadetblue; font-size: large;">!! {{offer.percentage}} % off !!</h5>
@@ -83,8 +166,17 @@
         </div>
     </div>
     <h3>Product Details <i class="fa fa-indent"></i></h3>
-    <br>
-    <p>{{variant.product.description}}</p>
+<br>
+<ul style="
+    line-height: 1.8; 
+    font-size: 16px; 
+    padding-left: 20px; 
+    list-style-type: disc;
+">
+    {% for line in variant.product.description.splitlines %}
+        <li>{{ line }}</li>
+    {% endfor %}
+</ul>
 </div>
 <!-- title -->1
 <div class="small-container">
@@ -215,23 +307,53 @@
     </div>
 </div> -->
 <script>
-    var ProductImg = document.getElementById("ProductImg");
-        var SmallImg = document.getElementsByClassName("small-img");
+function changeImage(url) {
+    document.getElementById("mainImage").src = url;
+    document.getElementById("zoomResult").style.backgroundImage = `url(${url})`;
+}
 
-        SmallImg[0].onclick = function () {
-            ProductImg.src = SmallImg[0].src;
-        }
-        SmallImg[1].onclick = function () {
-            ProductImg.src = SmallImg[1].src;
-        }
-        SmallImg[2].onclick = function () {
-            ProductImg.src = SmallImg[2].src;
-        }
-        SmallImg[3].onclick = function () {
-            ProductImg.src = SmallImg[3].src;
-        }
+const mainImage = document.getElementById("mainImage");
+const lens = document.getElementById("zoomLens");
+const result = document.getElementById("zoomResult");
+
+mainImage.addEventListener("mousemove", moveLens);
+lens.addEventListener("mousemove", moveLens);
+
+mainImage.addEventListener("mouseenter", () => {
+    lens.style.display = "block";
+    result.style.display = "block";
+    result.style.backgroundImage = `url(${mainImage.src})`;
+});
+
+mainImage.addEventListener("mouseleave", () => {
+    lens.style.display = "none";
+    result.style.display = "none";
+});
+
+function moveLens(e) {
+    const rect = mainImage.getBoundingClientRect();
+
+    let x = e.pageX - rect.left - lens.offsetWidth / 2;
+    let y = e.pageY - rect.top - lens.offsetHeight / 2;
+
+    if (x < 0) x = 0;
+    if (y < 0) y = 0;
+    if (x > rect.width - lens.offsetWidth) x = rect.width - lens.offsetWidth;
+    if (y > rect.height - lens.offsetHeight) y = rect.height - lens.offsetHeight;
+
+    lens.style.left = x + "px";
+    lens.style.top = y + "px";
+
+    let ratioX = result.offsetWidth / lens.offsetWidth;
+    let ratioY = result.offsetHeight / lens.offsetHeight;
+
+    result.style.backgroundSize = 
+        rect.width * ratioX + "px " + rect.height * ratioY + "px";
+
+    result.style.backgroundPosition =
+        `-${x * ratioX}px -${y * ratioY}px`;
+}
 </script>
-
 <script>
 $(document).off("click", ".add-to-cart-btn");    
 $(document).on("click", ".add-to-cart-btn", function(e) {
